# datacentric-sba-for-6g

./: Cargo.toml
fiveg_proto/: namf-comm.proto  nnrf-disc.proto  nsfm-pdusession.proto  nudm-sdm.proto
grpc-analyze/: Cargo.toml
http-analyze/: Cargo.toml
kafka-analyze/: Cargo.toml
kafka-analyze/src/: main.rs  opts.rs
mqtt-analyze/: Cargo.toml
mqtt-analyze/src/: main.rs
nnrf-discovery-server/: Cargo.toml  README.md
nnrf-discovery-server/.openapi-generator/: FILES
nnrf-discovery-server/api/: openapi.yaml
nnrf-discovery-server/docs/: AanfInfo.md  AccessTokenErr.md  AfEventAnyOf.md  AfEventExposureData.md  AmfInfo.md  AmfRegionId.md  AmfSetId.md  AnNodeTypeAnyOf.md  AreaSessionId.md  Atom.md  AtsssCapability.md  AusfInfo.md  BsfInfo.md  ChfInfo.md  Cnf.md  CnfUnit.md  CollocatedNfInstance.md  CollocatedNfType.md  CollocatedNfTypeAnyOf.md  ComplexQuery.md  DataSetIdAnyOf.md  DccfInfo.md  DefSubServiceInfo.md  DefaultNotificationSubscription.md  DiameterIdentity.md  Dnai.md  Dnf.md  DnfUnit.md  Dnn.md  DnnEasdfInfoItem.md  DnnInfoItem.md  DnnMbSmfInfoItem.md  DnnSmfInfoItem.md  DnnSmfInfoItemDnaiListInner.md  DnnSmfInfoItemDnn.md  DnnTsctsfInfoItem.md  DnnUpfInfoItem.md  EasdfInfo.md  EventIdAnyOf.md  ExtGroupId.md  (+114 more)
nnrf-discovery-server/examples/client/: main.rs
nnrf-discovery-server/examples/nrf-server/: main.rs  server.rs
nnrf-discovery-server/src/: lib.rs  models.rs
nnrf-discovery-server/src/client/: callbacks.rs  mod.rs
nnrf-discovery-server/src/server/: callbacks.rs  mod.rs
nnrf-zenoh/: Cargo.toml
nnrf-zenoh/src/: lib.rs  server.rs
nrf-grpc/: Cargo.toml  build.rs
nrf-grpc/src/: lib.rs
nsfm-pdusession/: Cargo.toml  README.md
nsfm-pdusession/.openapi-generator/: FILES
nsfm-pdusession/api/: openapi.yaml
nsfm-pdusession/docs/: AdditionalTnlNb.md  AfCoordinationInfo.md  AlternativeQosProfile.md  Ambr.md  AmfName.md  AnchorSmfFeatures.md  ApnRateStatus.md  ArpPriorityLevel.md  AverWindow.md  BackupAmfInfo.md  CauseAnyOf.md  CellGlobalId.md  ChargingInformation.md  CnAssistedRanPara.md  DddTrafficDescriptor.md  DdnFailureSubInfo.md  DdnFailureSubs.md  DnaiInformation.md  DnnSelectionModeAnyOf.md  DrbId.md  Dynamic5Qi.md  EbiArpMapping.md  EpsBearerContainer.md  EpsBearerContextStatus.md  EpsBearerId.md  EpsBearerInfo.md  EpsInterworkingIndicationAnyOf.md  EpsPdnCnxContainer.md  EpsPdnCnxInfo.md  EutraLocation.md  ExemptionInd.md  ExtMaxDataBurstVol.md  ExtPacketDelBudget.md  ExtProblemDetails.md  ForwardingBearerContainer.md  Fqdn.md  GbrQosFlowInformation.md  Gci.md  GeraLocation.md  Gli.md  (+182 more)
nsfm-pdusession/examples/client/: main.rs
nsfm-pdusession/examples/smf-server/: main.rs  server.rs
nsfm-pdusession/src/: lib.rs  models.rs
nsfm-pdusession/src/client/: callbacks.rs  mod.rs
nsfm-pdusession/src/server/: callbacks.rs  mod.rs
nudm-sdm/: Cargo.toml  README.md
nudm-sdm/.openapi-generator/: FILES
nudm-sdm/api/: openapi.yaml
nudm-sdm/docs/: AccessAndMobilitySubscriptionData.md  AccessAndMobilitySubscriptionDataSubscribedDnnListInner.md  AccessTech.md  AccessTechAnyOf.md  AccessTokenReq.md  AckInd.md  AcknowledgeInfo.md  AcsInfo.md  AdditionalSnssaiData.md  AerialUeIndication.md  AerialUeIndicationAnyOf.md  AerialUeSubscriptionInfo.md  AfExternal.md  AfId.md  Altitude.md  AmbrRm.md  AmfId.md  AmfInfo.md  Angle.md  AppDescriptor.md  AppPortId.md  Area.md  AreaCode.md  AreaScope.md  ArfcnValueNr.md  Arp.md  BatteryIndication.md  CMsisdn.md  CagData.md  CagId.md  CagInfo.md  ChangeItem.md  ChangeTypeAnyOf.md  CivicAddress.md  CodeWord.md  CodeWordInd.md  CodeWordIndAnyOf.md  CollectionPeriodRmmLteMdt.md  CollectionPeriodRmmLteMdtAnyOf.md  CollectionPeriodRmmNrMdt.md  (+283 more)
nudm-sdm/examples/client/: main.rs
nudm-sdm/examples/udm-server/: main.rs  server.rs
nudm-sdm/src/: lib.rs  models.rs
nudm-sdm/src/client/: callbacks.rs  mod.rs
nudm-sdm/src/server/: callbacks.rs  mod.rs
pcf-kafka/: Cargo.toml
pcf-kafka/src/: lib.rs
pcf-mqtt/: Cargo.toml
pcf-mqtt/src/: main.rs
pcf-zenoh/: Cargo.toml
pcf-zenoh/src/: lib.rs
sfm-grpc/: Cargo.toml  build.rs
sfm-grpc/src/: lib.rs
smf-zenoh/: Cargo.toml
smf-zenoh/src/: lib.rs  server.rs
udm-grpc/: Cargo.toml  build.rs
udm-grpc/src/: lib.rs
udm-zenoh/: Cargo.toml
udm-zenoh/src/: lib.rs  server.rs
zenoh-analyze/: Cargo.toml
