[package]
name = "http-analyze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.24"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
swagger = { version = "6.1", features = ["serdejson", "server", "client", "tls", "tcp"] }
log = "0.4.0"
mime = "0.3"
derive_more = "0.99.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crates included if required by the API definition
uuid = { version = "=1.2.2", features = ["serde", "v4"] }

# Common between server and client features
hyper = {version = "0.14", features = ["full"] }
serde_ignored = {version = "0.1.1" }
url = {version = "2.1"}

http-body = "0.4.5"

# 5GCore
nnrf-discovery-server = {path = "../nnrf-discovery-server"}
nsfm-pdusession = {path = "../nsfm-pdusession"}


clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.7"
tokio = { version = "1.14", features = ["full"] }
native-tls = "0.2"


lazy_static = { version = "1.4" }
percent-encoding = {version = "2.1.0"}
regex = {version = "1.3"}

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "ios"))'.dependencies]
native-tls = { version = "0.2" }
hyper-tls = { version = "0.5"}

[target.'cfg(not(any(target_os = "macos", target_os = "windows", target_os = "ios")))'.dependencies]
hyper-openssl = { version = "0.9"}
openssl = {version = "0.10" }
tokio-openssl = "0.6"


