[package]
name = "nnrf-zenoh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zrpc-macros = { git = "https://github.com/ZettaScaleLabs/zenoh-rpc", branch = "master"}
zrpc = { git = "https://github.com/ZettaScaleLabs/zenoh-rpc", branch = "master", default-features = false, features =  ["resp_cbor", "send_cbor", "state_cbor", "router_json", "transport_tcp", "query_payload"]}
zenoh-sync = { version = "=0.7.0-rc" }
zenoh-util = { version = "=0.7.0-rc" }
zenoh = { version = "=0.7.0-rc", features = ["unstable"] }
zenoh-config = "0.7.0-rc"
nnrf-discovery-server = {path = "../nnrf-discovery-server"}
serde_json = "1.0"
uuid = { version = "=1.2.2", features = ["serde", "v4"] }
env_logger = "0.10"
log = "0.4"
async-std = { version = "=1.12.0", features = ["attributes"] }
futures = "0.3.15"
futures-lite = "1.12"
serde = { version = "1.0.55", features = ["derive", "rc"] }
serde_derive = "1.0.55"
clap = { version = "4.1.8", features = ["derive"] }
tonic = "0.8"
prost = "0.11"

[build-dependencies]
tonic-build = "0.8"