[package]
name = "pcf-kafka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcf-zenoh = {path = "../pcf-zenoh"}
anyhow = "1.0.58"
chrono = "0.4.19"
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.21"
humantime = "2.1.0"
itertools = "0.10.3"
log = "0.4.17"
noisy_float = { version = "0.2.0" }
num-traits = "0.2.15"
once_cell = "1.13.0"
pretty_env_logger = "0.4.0"
async-std = { version = "=1.12.0", features = ["attributes", "unstable"] }
rdkafka = { git = "https://github.com/fede1024/rust-rdkafka", features = ["naive-runtime"] }
flume = "0.10.14"