[package]
name = "pcf-zenoh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh-sync = { version = "=0.7.0-rc" }
zenoh-util = { version = "=0.7.0-rc" }
zenoh = { version = "=0.7.0-rc", features = ["unstable"] }
zenoh-config = "0.7.0-rc"
nudm-sdm = {path = "../nudm-sdm"}
serde_json = "1.0"
uuid = { version = "=1.2.2", features = ["serde", "v4"] }
env_logger = "0.10"
log = "0.4"
async-std = { version = "=1.12.0", features = ["attributes"] }
futures = "0.3.15"
futures-lite = "1.12"
serde = { version = "1.0.55", features = ["derive", "rc"] }
serde_derive = "1.0.55"
serde_cbor = "0.11.2"
clap = { version = "4.1.8", features = ["derive"] }