[package]
name = "smf-zenoh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh-sync = { version = "=0.7.0-rc" }
zenoh-util = { version = "=0.7.0-rc" }
zenoh = { version = "=0.7.0-rc", features = ["unstable"] }
zenoh-config = "0.7.0-rc"
nsfm-pdusession = {path = "../nsfm-pdusession"}
serde_json = "1.0"
uuid = { version = "=1.2.2", features = ["serde", "v4"] }
env_logger = "0.10"
log = "0.4"
async-std = { version = "=1.12.0", features = ["attributes"] }
futures = "0.3.15"
futures-lite = "1.12"
serde = { version = "1.0.55", features = ["derive", "rc"] }
serde_derive = "1.0.55"
clap = { version = "4.1.8", features = ["derive"] }

# types
nnrf-discovery-server = {path = "../nnrf-discovery-server"}
nudm-sdm = {path = "../nudm-sdm"}

# interfaces
udm-zenoh = {path = "../udm-zenoh"}
nnrf-zenoh = {path = "../nnrf-zenoh"}