[package]
name = "udm-grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.1.8", features = ["derive"] }


[build-dependencies]
tonic-build = "0.8"